--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 </head>
 <body>
   <h1>🚧 Site360 – Coming Soon</h1>
-  <p>We are building a powerful platform for construction management. Stay tuned!</p>
+  <p>We’re working on something amazing to help you simplify and scale your projects. Stay tuned!</p>
 </body>
 </html>
